# industrial-data-transfer-api

./: README.md
factory_agent/: .gitignore  README.md  config.yaml  pyproject.toml
factory_agent/Installation/: Build-FactoryDeploymentInstaller.ps1  README.md
factory_agent/Installation/src/: FactoryBootstrap.ps1  FactoryDeploymentInstallerGui.ps1
factory_agent/agent/: config.py  exporter.py  main.py  sqlite_reader.py  state.py  uploader.py
factory_agent/app_common/: checksum.py  schemas.py
receiver_api/: .gitignore  README.md  config.yaml  pyproject.toml
receiver_api/api/: config.py  db.py  main.py
receiver_api/app_common/: checksum.py
receiver_api/ui/: index.html
receiver_api/ui/static/: ui.css  ui.js
